hphp/hack/test/typecheck/foreach_list_async2.php.like_types.exp
File "foreach_list_async2.php", line 20, characters 9-10:
Invalid argument (Typing[4110])
File "foreach_list_async2.php", line 12, characters 14-19:
Expected string
File "foreach_list_async2.php", line 19, characters 12-16:
But got dynamic because a type could not be determined here
